Revert "fixing the thumbnail to make it more visible"
This reverts commit 21354197d73f796a7917a0381e592c9521dea986.

--- a/reddit-feed/src/app/app.component.css
+++ b/reddit-feed/src/app/app.component.css
@@ -68,10 +68,6 @@ a {
     margin-top: 16px;
 }
 
-.mr-16 {
-    margin-right: 16px;
-}
-
 .mb-16 {
     margin-bottom: 16px;
 }
